--- a/2-2-12-AssignmentQuestion.ipynb
+++ b/2-2-12-AssignmentQuestion.ipynb
@@ -806,13 +806,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "metadata": {
         "id": "pkaEHHgqZbYv",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f24c1895-bfab-4483-ab5a-21c866727398"
+        "outputId": "c68275e1-6665-4a5d-e302-5bc435c93f01"
       },
       "outputs": [
         {
@@ -820,26 +820,22 @@
           "name": "stdout",
           "text": [
             "Epoch 1/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 5ms/step - accuracy: 0.7878 - loss: 0.6109\n",
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 5ms/step - accuracy: 0.7884 - loss: 0.5972\n",
             "Epoch 2/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 5ms/step - accuracy: 0.8620 - loss: 0.3749\n",
-            "Epoch 3/5\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 5ms/step - accuracy: 0.8746 - loss: 0.3355\n",
-            "Epoch 4/5\n",
-            "\u001b[1m1867/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 5ms/step - accuracy: 0.8849 - loss: 0.3075\n",
+            "\u001b[1m1874/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━\u001b[0m \u001b[1m0s\u001b[0m 6ms/step - accuracy: 0.8635 - loss: 0.3715\n",
             "✋ Entrenamiento detenido: Pérdida menor a 0.3 después de la segunda época.\n",
-            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m10s\u001b[0m 5ms/step - accuracy: 0.8849 - loss: 0.3075\n"
+            "\u001b[1m1875/1875\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m11s\u001b[0m 6ms/step - accuracy: 0.8635 - loss: 0.3715\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.src.callbacks.history.History at 0x7f8390582450>"
+              "<keras.src.callbacks.history.History at 0x7f83901c2410>"
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 20
         }
       ],
       "source": [
@@ -849,7 +845,7 @@
         "    # Asegurar que al menos se ejecuten 2 épocas antes de detenerse\n",
         "    #if epoch >= 1 and logs.get('accuracy') >= 0.90:\n",
         "    #  print(\"\\n✋ ¡Precisión del 95%! Deteniendo el entrenamiento después de la segunda época...\")\n",
-        "    if epoch >= 1 and logs.get('loss') <= 0.32: # Detener si la pérdida es menor o igual a 0.3\n",
+        "    if epoch >= 1 and logs.get('accuracy') > 0.86: # Detener si la pérdida es menor o igual a 0.3\n",
         "      print(\"\\n✋ Entrenamiento detenido: Pérdida menor a 0.3 después de la segunda época.\")\n",
         "      self.model.stop_training = True\n",
         "callbacks = myCallback()\n",
