--- a/2-3-9-AssignmentQuestion.ipynb
+++ b/2-3-9-AssignmentQuestion.ipynb
@@ -52,6 +52,78 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "La elección de los valores y la secuencia de capas en una red neuronal convolucional (CNN) no es aleatoria, sino que sigue principios para mejorar la extracción de características y la clasificación de imágenes.\n",
+        "1. Capas convolucionales (Conv2D)\n",
+        "Las capas conv2D aplican filtros sobre la imagen para detectar características como bordes, texturas y patrones.\n",
+        "FIRST_LAYER = layers.Conv2D(32, (3,3), activation='relu', input_shape=(32, 32, 3))\n",
+        "\n",
+        " 🔹 ¿Por qué 32 filtros?\n",
+        "Se comienza con un número pequeño de filtros (32) para aprender características básicas de la imagen.\n",
+        "\n",
+        " Aumentamos la cantidad de filtros en capas posteriores (64 en las siguientes capas) porque necesitamos detectar patrones más complejos.\n",
+        "\n",
+        " 🔹 ¿Por qué 3x3 en el kernel?\n",
+        "Tamaños pequeños como 3x3 funcionan bien para capturar detalles locales sin perder información.\n",
+        "\n",
+        " Es estándar en CNNs, porque un filtro más grande podría capturar demasiada información global y un filtro más pequeño podría no capturar suficientes detalles.\n",
+        "\n",
+        " 🔹 ¿Por qué activation='relu'?\n",
+        "La activación ReLU (Rectified Linear Unit) mantiene solo valores positivos, lo que ayuda al modelo a aprender características útiles y evita problemas con gradientes.\n",
+        "\n",
+        "2. Capas de MaxPooling (MaxPooling2D)\n",
+        "Estas capas reducen el tamaño de la imagen para enfocar el modelo en las características más importantes.\n",
+        "\n",
+        "  HIDDEN_LAYER_TYPE_1 = layers.MaxPooling2D((2,2))\n",
+        "\n",
+        " 🔹 ¿Por qué 2x2 en MaxPooling2D?\n",
+        "\n",
+        "  Reduce la dimensionalidad a la mitad en cada paso.\n",
+        "\n",
+        "  Permite que la CNN se enfoque en las partes más importantes de la imagen, eliminando detalles irrelevantes.\n",
+        "\n",
+        "3. Segunda convolución (Conv2D)\n",
+        "\n",
+        "  HIDDEN_LAYER_TYPE_2 = layers.Conv2D(64, (3,3), activation='relu')\n",
+        "\n",
+        "  Ahora aumentamos los filtros a 64 para aprender características más avanzadas, como bordes combinados o formas específicas dentro de la imagen.\n",
+        "\n",
+        "  La secuencia sigue con otro MaxPooling2D(2,2) para reducir aún más la imagen.\n",
+        "\n",
+        "4. Última convolución\n",
+        "\n",
+        "  HIDDEN_LAYER_TYPE_4 = layers.Conv2D(64, (3,3), activation='relu')\n",
+        "\n",
+        "  Se mantiene el número de filtros (64) porque ya hemos comprimido la imagen y ahora estamos aprendiendo características globales.\n",
+        "\n",
+        "5. Capa Flatten\n",
+        "\n",
+        "  layers.Flatten()\n",
+        "\n",
+        "  Convierte la imagen de forma matricial a un vector (unidimensional) para poder conectarla con capas densas.\n",
+        "\n",
+        "6. Capa oculta Dense(64, activation='relu')\n",
+        "\n",
+        "  HIDDEN_LAYER_TYPE_5 = layers.Dense(64, activation='relu')\n",
+        "\n",
+        "  Esta capa ayuda a extraer relaciones entre las características aprendidas en las convoluciones.\n",
+        "\n",
+        "  64 neuronas suele ser un buen número en redes medianas para capturar combinaciones de características.\n",
+        "\n",
+        "7. Capa de salida\n",
+        "\n",
+        "  LAST_LAYER = layers.Dense(10)\n",
+        "\n",
+        "  La salida tiene 10 neuronas, porque CIFAR-10 tiene 10 clases (avión, automóvil, pájaro, gato, etc.).\n",
+        "\n",
+        "  No usamos softmax aquí porque en tu código la función de pérdida lo aplica internamente (SparseCategoricalCrossentropy(from_logits=True))."
+      ],
+      "metadata": {
+        "id": "snkiENMn5oj6"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 5,
       "metadata": {
@@ -103,11 +175,11 @@
       "execution_count": 7,
       "metadata": {
         "id": "Dxq2JU7dVIEX",
-        "outputId": "9dae4bdc-6c67-490e-cd22-93c07c1569f9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "outputId": "9dae4bdc-6c67-490e-cd22-93c07c1569f9"
       },
       "outputs": [
         {
@@ -210,12 +282,12 @@
       "cell_type": "code",
       "execution_count": 8,
       "metadata": {
-        "id": "AWWR_GuBS69L",
-        "outputId": "9bf4692b-a4d4-4790-f85a-35c1c1a28dee",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
-        }
+        },
+        "id": "AWWR_GuBS69L",
+        "outputId": "9bf4692b-a4d4-4790-f85a-35c1c1a28dee"
       },
       "outputs": [
         {
